--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Jul 28 18:41:31 UTC 2025
+#Mon Jul 28 19:09:43 UTC 2025
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -8,7 +8,7 @@ enable-command-block=false
 enable-query=false
 generator-settings={}
 level-name=world
-motd=\u00A7r              \u00A75\u00A7l(MSX)  \u00A7dHosting Gratuito\u00A7r\n          \u00A7f\u00A7nhttps\://discord.gg/w9xt8ydNZe
+motd=El fucking peor servidor ever\!
 query.port=25565
 pvp=true
 generate-structures=true
@@ -17,7 +17,7 @@ network-compression-threshold=256
 require-resource-pack=false
 max-tick-time=60000
 use-native-transport=true
-max-players=40
+max-players=777
 online-mode=false
 enable-status=true
 allow-flight=false
